circleci integration tests now run at trace level

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
     docker:
       - image: circleci/golang:1.14
     environment:
-      LOGLEVEL: WARN
+      LOGLEVEL: TRACE
       LOGCOLOR: FALSE
       UPSTREAM_01_PORT: 60083
       UPSTREAM_01_SLUG: /mse6
