--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,7 +271,10 @@ jobs:
       UPSTREAM_TWO_SLUG: /mse6
       UPSTREAM_THREE_PORT: 60085
       UPSTREAM_THREE_SLUG: /s1
-      JABBA_PORT: 8080
+      JABBA_ONE_PORT: 8080
+      JABBA_ONE_CFG: ./integration/jabba1.json
+      JABBA_THREE_PORT: 8443
+      JABBA_THREE_CFG: ./integration/jabba3.json
       TEST_DURATION_SECONDS: 10
       TEST_CONCURRENCY: 8
     steps:
@@ -311,23 +314,37 @@ jobs:
             go build github.com/simonmittag/jabba
             go install github.com/simonmittag/jabba/cmd/jabba
       - run:
-          name: Start jabba
-          command: jabba
+          name: Start jabba one
+          command: jabba -c ${JABBA_ONE_CFG}
           background: true
       - run:
-          name: Wait for Jabba
-          command: pwt localhost:${JABBA_PORT}
+          name: Wait for Jabba one
+          command: pwt localhost:${JABBA_ONE_PORT}
       - run:
-          name: Execute performance tests on Jabba with wrk
-          command: cd performance && wrk -t ${TEST_CONCURRENCY} -c ${TEST_CONCURRENCY} -d ${TEST_DURATION_SECONDS}s -s test.lua -- http://localhost:${JABBA_PORT}/mse6/post performance_results.json
+          name: Start jabba three
+          command: jabba -c ${JABBA_THREE_CFG}
+          background: true
       - run:
-          name: Display performance test results
+          name: Wait for Jabba three
+          command: pwt localhost:${JABBA_THREE_PORT}
+      - run:
+          name: Execute performance tests on Jabba one in HTTP mode with wrk
+          command: cd performance && wrk -t ${TEST_CONCURRENCY} -c ${TEST_CONCURRENCY} -d ${TEST_DURATION_SECONDS}s -s test.lua -- http://localhost:${JABBA_ONE_PORT}/mse6/post performance_results.json
+      - run:
+          name: Display performance Jabba one test results in HTTP mode
           command: |
             export reqss=`cat performance/performance_results.json | jq .requestspersecond`
             echo "(ignore 'Step cancelled' messages upstream, Jabba shutdown related)"
-            echo "=> performance test results, ${reqss} req/s"
-
-
+            echo "=> HTTP performance test results, ${reqss} req/s"
+      - run:
+          name: Execute performance tests on Jabba three in TLS mode with wrk
+          command: cd performance && wrk -t ${TEST_CONCURRENCY} -c ${TEST_CONCURRENCY} -d ${TEST_DURATION_SECONDS}s -s test.lua -- https://localhost:${JABBA_THREE_PORT}/mse6/post performance_results_tls.json
+      - run:
+          name: Display Jabba three performance test results in TLS mode
+          command: |
+            export reqss=`cat performance/performance_results_tls.json | jq .requestspersecond`
+            echo "(ignore 'Step cancelled' messages upstream, Jabba shutdown related)"
+            echo "=> TLS performance test results, ${reqss} req/s"
 
   performance:
     docker:
@@ -405,7 +422,7 @@ jobs:
           path: performance/performance_results.json
           destination: performance_results.json
       - run:
-          name: Check performance test results from Jabba one in HTTP mode against threshold
+          name: Check HTTP performance test results from Jabba one against threshold
           command: |
             export reqss=`cat performance/performance_results.json | jq .requestspersecond`
             test ${reqss} -gt ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} && (echo "performance test passed, ${reqss} req/s > ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} req/s";exit 0) || (echo "performance test failed, ${reqss} req/s < ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} req/s";pkill jq)
@@ -416,7 +433,7 @@ jobs:
           path: performance/performance_results_tls.json
           destination: performance_results_tls.json
       - run:
-          name: Check performance test results from Jabba three in TLS mode against threshold
+          name: Check TLS performance test results from Jabba three against threshold
           command: |
             export reqss=`cat performance/performance_results_tls.json | jq .requestspersecond`
             test ${reqss} -gt ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} && (echo "performance test passed, ${reqss} req/s > ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} req/s";exit 0) || (echo "performance test failed, ${reqss} req/s < ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} req/s";pkill jq)
