--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,7 +276,8 @@ jobs:
       JABBA_THREE_PORT: 8443
       JABBA_THREE_CFG: ./integration/jabba3.json
       TEST_DURATION_SECONDS: 10
-      TEST_CONCURRENCY: 8
+      TEST_CONCURRENCY_LOW: 8
+      TEST_CONCURRENCY_HIGH: 100
     steps:
       - checkout # check out source code to working directory
       - run:
@@ -328,23 +329,41 @@ jobs:
           name: Wait for Jabba three
           command: pwt localhost:${JABBA_THREE_PORT}
       - run:
-          name: Execute performance tests on Jabba one in HTTP mode with wrk
-          command: cd performance && wrk -t ${TEST_CONCURRENCY} -c ${TEST_CONCURRENCY} -d ${TEST_DURATION_SECONDS}s -s test.lua -- http://localhost:${JABBA_ONE_PORT}/mse6/post performance_results.json
+          name: Execute concurrency ${TEST_CONCURRENCY_LOW} performance tests in HTTP mode with wrk
+          command: cd performance && wrk -t ${TEST_CONCURRENCY_LOW} -c ${TEST_CONCURRENCY_LOW} -d ${TEST_DURATION_SECONDS}s -s test.lua -- http://localhost:${JABBA_ONE_PORT}/mse6/post performance_results_http_low.json
       - run:
-          name: Display performance Jabba one test results in HTTP mode
+          name: Display concurrency ${TEST_CONCURRENCY_LOW} performance test results in HTTP mode
           command: |
-            export reqss=`cat performance/performance_results.json | jq .requestspersecond`
+            export reqss=`cat performance/performance_results_http_low.json | jq .requestspersecond`
             echo "(ignore 'Step cancelled' messages upstream, Jabba shutdown related)"
-            echo "=> HTTP performance test results, ${reqss} req/s"
+            echo "=> performance test results http, concurrency ${TEST_CONCURRENCY_LOW}, ${reqss} req/s"
       - run:
-          name: Execute performance tests on Jabba three in TLS mode with wrk
-          command: cd performance && wrk -t ${TEST_CONCURRENCY} -c ${TEST_CONCURRENCY} -d ${TEST_DURATION_SECONDS}s -s test.lua -- https://localhost:${JABBA_THREE_PORT}/mse6/post performance_results_tls.json
+          name: Execute concurrency ${TEST_CONCURRENCY_LOW} performance tests in TLS mode
+          command: cd performance && wrk -t ${TEST_CONCURRENCY_LOW} -c ${TEST_CONCURRENCY_LOW} -d ${TEST_DURATION_SECONDS}s -s test.lua -- https://localhost:${JABBA_THREE_PORT}/mse6/post performance_results_tls_low.json
       - run:
-          name: Display Jabba three performance test results in TLS mode
+          name: Display concurrency ${TEST_CONCURRENCY_LOW} performance test results in TLS mode
           command: |
-            export reqss=`cat performance/performance_results_tls.json | jq .requestspersecond`
+            export reqss=`cat performance/performance_results_tls_low.json | jq .requestspersecond`
             echo "(ignore 'Step cancelled' messages upstream, Jabba shutdown related)"
-            echo "=> TLS performance test results, ${reqss} req/s"
+            echo "=> performance test results TLS, concurrency ${TEST_CONCURRENCY_LOW}, ${reqss} req/s"
+      - run:
+          name: Execute concurrency ${TEST_CONCURRENCY_HIGH} performance tests in HTTP mode
+          command: cd performance && wrk -t ${TEST_CONCURRENCY_HIGH} -c ${TEST_CONCURRENCY_HIGH} -d ${TEST_DURATION_SECONDS}s -s test.lua -- http://localhost:${JABBA_ONE_PORT}/mse6/post performance_results_http_high.json
+      - run:
+          name: Display concurrency ${TEST_CONCURRENCY_HIGH} performance test results in HTTP mode
+          command: |
+            export reqss=`cat performance/performance_results_http_high.json | jq .requestspersecond`
+            echo "(ignore 'Step cancelled' messages upstream, Jabba shutdown related)"
+            echo "=> performance test results HTTP, concurrency ${TEST_CONCURRENCY_HIGH}, ${reqss} req/s"
+      - run:
+          name: Execute concurrency ${TEST_CONCURRENCY_HIGH} performance tests in TLS mode
+          command: cd performance && wrk -t ${TEST_CONCURRENCY_HIGH} -c ${TEST_CONCURRENCY_HIGH} -d ${TEST_DURATION_SECONDS}s -s test.lua -- https://localhost:${JABBA_THREE_PORT}/mse6/post performance_results_tls_high.json
+      - run:
+          name: Display concurrency ${TEST_CONCURRENCY_HIGH} test results in TLS mode
+          command: |
+            export reqss=`cat performance/performance_results_tls_high.json | jq .requestspersecond`
+            echo "(ignore 'Step cancelled' messages upstream, Jabba shutdown related)"
+            echo "=> performance test results TLS, concurrency ${TEST_CONCURRENCY_HIGH}, ${reqss} req/s"
 
   performance:
     docker:
